# 2D_RPG_demo

./: .gitignore  CMakeLists.txt  README.md  TODO.md  learning.md
CMakeProject1/: CMakeLists.txt
MapEditor/: CMakeLists.txt
MapEditor/src/: Grid.cpp  Grid.h  Map.h  MouseTile.cpp  MouseTile.h  main.cpp
SFML_test/: CMakeLists.txt
SFML_test/assests/: demo.tiled-session
SFML_test/assests/Maps/: overworldMap.json  test_map.json  tiledMap.json
SFML_test/assests/World/: basictiles.json  basictiles_tileset.json  overworld_tileset.json  world.json
SFML_test/dependency/: JsonElement.cpp  JsonHandler.cpp  JsonHandler.h
SFML_test/src/: Animation.cpp  Animation.h  Collider.cpp  Collider.h  Constants.h  Entity.h  Game.cpp  Game.h  Map.cpp  Map.h  MapLoader.cpp  MapLoader.h  Object.h  Platform.cpp  Platform.h  Player.cpp  Player.h  TextureInfo.h  Tile.h  Tileset.cpp  Tileset.h  TilesetLoader.cpp  TilesetLoader.h  main.cpp
SFML_test/src/core/: Game.cpp  Game.h  ResourceManager.cpp  ResourceManager.h
SFML_test/src/entities/: Entity.h  Platform.h  Player.cpp  Player.h
SFML_test/src/graphics/: Animation.cpp
SFML_test/src/physics/: Collider.cpp
SFML_test/src/utils/: Object.h
SFML_test/src/world/: Map.h  MapLoader.cpp  MapLoader.h  Tile.h  Tileset.h
docs/: Build.md  Controls.md  Overview.md  ProjectStructure.md
